@@ -6,7 +6,7 @@ copyright_year   = 2011
 
 [AutoVersion]
 major = 0
-format = {{ $major }}.1
+format = {{ $major }}.2
 ;format = {{ $major }}.{{ cldr('yyDDD') }}
 
 ; -- fetch & generate files
