@@ -2,6 +2,8 @@
 
 use Test::More tests => 6;
 
+use Config;
+
 BEGIN {
     use_ok( 'Geo::OSM::StaticMap' );
 }
@@ -21,7 +23,14 @@ my $staticmap_url = Geo::OSM::StaticMap->new(
     markers => [ [ 51.8785011494, -0.3767887732, 'ol-marker' ],
                  [ 51.455313, -2.591902, 'ol-marker' ], ])->url();
 
-is( $staticmap_url, 'http://staticmap.openstreetmap.de/staticmap.php?center=51.6721152964047,-1.47917174588472&zoom=8&size=756x476&markers=51.8785011494,-0.3767887732,ol-marker|51.455313,-2.591902,ol-marker&maptype=mapnik', 'Got expected URL with center and zoom calculated from markers');
+
+# Precision of the calculated center depends on Perl having uselongdouble defined or not
+if ( defined $Config::Config{uselongdouble} ) {
+    is( $staticmap_url, 'http://staticmap.openstreetmap.de/staticmap.php?center=51.6721152964046982,-1.47917174588471822&zoom=8&size=756x476&markers=51.8785011494,-0.3767887732,ol-marker|51.455313,-2.591902,ol-marker&maptype=mapnik', 'Got expected URL with center and zoom calculated from markers (uselongdouble');
+}
+else {
+    is( $staticmap_url, 'http://staticmap.openstreetmap.de/staticmap.php?center=51.6721152964047,-1.47917174588472&zoom=8&size=756x476&markers=51.8785011494,-0.3767887732,ol-marker|51.455313,-2.591902,ol-marker&maptype=mapnik', 'Got expected URL with center and zoom calculated from markers (no uselongdouble)');
+}
 
 my $staticmap_defaults_test = Geo::OSM::StaticMap->new();
 is_deeply( $staticmap_defaults_test->center, [0,0], 'Got expected default center');
